app/assets/tailwind/application.css
/* ... */
@utility field_with_errors {
  .form-field &div {
    @apply block w-full;
  }
}

@utility prefixed {
  .form-field &input[type="text"] {
    @apply rounded-l-none rounded-r-md;
  }

  .form-field &input[type="search"] {
    @apply rounded-l-none rounded-r-md;
  }

  .form-field &input[type="password"] {
    @apply rounded-l-none rounded-r-md;
  }

  .form-field &input[type="email"] {
    @apply rounded-l-none rounded-r-md;
  }

  .form-field &select {
    appearance: none;
    padding: 0 1em 0 1em;
    margin: 0;
    width: 100%;
    font-family: inherit;
    font-size: inherit;
    cursor: inherit;
    line-height: inherit;
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
    @apply block w-full rounded-r-md border border-slate-300 bg-white p-2.5 text-sm text-slate-900 focus:border-green-500 focus:ring-green-500 dark:border-slate-600 dark:bg-slate-800 dark:text-white dark:placeholder-slate-400 dark:drop-shadow-sm dark:focus:border-green-500 dark:focus:ring-green-500;
  }
}

@utility datepicker {
  &.form-field input[type="text"] {
    @apply focus:ring-primary-700 focus:border-primary-700 dark:focus:border-primary-500 dark:focus:ring-primary-500 block w-full rounded-md border border-slate-300 p-2.5 pl-10 text-slate-900 sm:text-sm dark:border-slate-600 dark:bg-slate-800 dark:text-white dark:placeholder-slate-400;
  }
}

@utility select2 {
  .form-field & input[type="text"] {
    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' aria-hidden='true' viewBox='0 0 10 6'%3E%3Cpath stroke='%236B7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m1 1 4 4 4-4'/%3E%3C/svg%3E");
    background-position: right 0.75rem center;
    background-repeat: no-repeat;
    background-size: 0.75em 0.75em;
    padding-right: 2.5rem;
    -webkit-print-color-adjust: exact;
    print-color-adjust: exact;
  }
}

@utility error {
  .form-field &select {
    @apply block w-full rounded-md border-red-500 p-2.5 text-slate-900 focus:border-red-500 focus:ring-red-500 sm:text-sm dark:border-red-400 dark:bg-slate-800 dark:text-white dark:placeholder-slate-400 dark:focus:border-red-500 dark:focus:ring-red-500;
  }
}

@utility invalid {
  &.form-field label {
    @apply text-red-700 dark:text-red-500;
  }

  &.form-field input[type="text"] {
    @apply border-red-500 bg-red-50 placeholder-red-700 focus:border-red-500 focus:ring-red-500 dark:border-red-400 dark:bg-red-800 dark:placeholder-red-300;
  }

  &.form-field input[type="file"] {
    @apply border-red-500 bg-red-50 placeholder-red-700 focus:border-red-500 focus:ring-red-500 dark:border-red-400 dark:bg-red-800 dark:placeholder-red-300;
  }

  &.form-field textarea {
    @apply border-red-500 bg-red-50 placeholder-red-700 focus:border-red-500 focus:ring-red-500 dark:border-red-400 dark:bg-red-800 dark:placeholder-red-300;
  }
}

@utility field-hint {
  @apply mt-1 text-sm text-slate-500 dark:text-slate-400;
}

@utility row-btn {
  @apply px-1 py-0 text-sm text-slate-500 hover:bg-slate-100 focus:ring-4 focus:ring-slate-200 dark:text-slate-400 dark:hover:bg-slate-700 dark:focus:ring-slate-700;

  & svg {
    @apply h-5 w-5;
  }
}

@utility viral-icon {
  height: 2rem;
  width: 2rem;
  max-height: 100%;
  max-width: 100%;
  margin: auto;
  @apply flex justify-center align-middle;
}

@utility viral-icon__Svg {
  position: relative;
  display: block;
  width: 100%;
  max-width: 100%;
  max-height: 100%;
}

@utility viral-icon--colorBase {
  @apply text-slate-900;
}

@utility viral-icon--colorSubdued {
  @apply text-slate-400;
}

@utility viral-icon--colorCritical {
  @apply text-red-500;
}

@utility viral-icon--colorWarning {
  @apply text-yellow-500;
}

@utility viral-icon--colorSuccess {
  @apply text-green-500;
}

@utility viral-icon--colorPrimary {
  @apply text-primary-500;
}

@utility viral-dropdown--button {
  @apply hover:text-primary-700 flex items-center rounded-md border border-slate-200 bg-white px-5 py-2.5 text-sm font-medium text-slate-900 hover:bg-slate-100 focus:z-10 focus:ring-4 focus:ring-slate-200 dark:border-slate-600 dark:bg-slate-800 dark:text-slate-300 dark:hover:bg-slate-700 dark:hover:text-white dark:focus:ring-slate-700;
}

@utility button {
  @apply inline-flex cursor-pointer items-center justify-center rounded-md border text-sm focus:z-10 sm:w-auto;

  &:disabled {
    @apply cursor-not-allowed opacity-50;
  }
}

@utility button--size-default {
  @apply px-5 py-2.5 text-sm;
}

@utility button--size-small {
  @apply px-3 py-2 text-xs;
}

@utility button--size-large {
  @apply px-7 py-3 text-lg;
}

@utility button--state-default {
  @apply border-slate-200 bg-white text-slate-900 hover:bg-slate-100 hover:text-slate-950 focus:ring-slate-200 dark:border-slate-600 dark:bg-slate-800 dark:text-slate-300 dark:hover:bg-slate-700 dark:hover:text-white dark:focus:ring-slate-700;
}

@utility button--state-destructive {
  @apply border-red-800 bg-red-700 text-white hover:bg-red-800 focus:ring-red-300 dark:border-red-600 dark:bg-red-600 dark:text-white dark:hover:bg-red-700 dark:focus:ring-red-700;
}

@utility button--state-primary {
  @apply border-primary-800 bg-primary-700 hover:bg-primary-800 focus:ring-primary-300 dark:focus:ring-primary-700 dark:bg-primary-800 dark:border-primary-900 dark:hover:bg-primary-700 text-white dark:text-white;
}

@utility dialog--size {
  @apply relative max-h-full w-full;
}

@utility dialog--size-sm {
  @apply max-w-md;
}

@utility dialog--size-md {
  @apply max-w-xl;
}

@utility dialog--size-lg {
  @apply max-w-3xl;
}

@utility dialog--size-xl {
  @apply max-w-7xl;
}

@utility dialog--title {
  @apply text-xl font-semibold text-slate-900 dark:text-white;
}

@utility dialog--close {
  @apply ml-auto inline-flex items-center rounded-lg bg-transparent p-1.5 text-sm text-slate-400 hover:bg-slate-200 hover:text-slate-900 focus:ring-4 focus:ring-slate-200 dark:hover:bg-slate-600 dark:hover:text-white dark:focus:ring-slate-700;
}
/* ... */

